Fix home tab item width on Firefox. Fix inability to leave server, for #95. Add warning to invite bot.

--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -13,7 +13,7 @@
 
     .actions {
         gap: 8px;
-        min-width: 240px;
+        width: 240px;
 
         margin: auto;
         display: flex;
